Added threejs for the main page interface

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,9 @@
+<!-- 
+<button class="button" (click)="redirectToFormsButton()">Heroes</button>
+<br> -->
+
+<div class="container">
+    <h1 class="home-page"> App Home page </h1>
+</div>
+
 <router-outlet />
