--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+    height:100vh;
+    width: 100vw;
+}
+
+.home-page{
+    display:flex;
+    justify-content:center;
+    color: red;
+}
